--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -8,6 +8,6 @@
   .header__logo {
     width: 104px;
     height: 25px;
-    padding-left: 8px;
+    margin-left: 27px;
   }
 }
